--- a/views/customers.ejs
+++ b/views/customers.ejs
@@ -23,7 +23,9 @@
                 <td><%= data[i].address %></td>
                 <td><%= data[i].phone %></td>
                 <td>
+                  <a href="/update/<%= data[i].id %>" class="btn btn-danger">Edit</a>
                     <a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>
+                    
                 </td>
               </tr>
             <% } %>
